# ai-cost-calculator-studio

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REPRODUCING.md  debug-doc.mjs  debug3.mjs  index.html  package-lock.json  package.json  test-doc-fix.mjs  wrangler.jsonc
bench/: .env.example  .gitignore  AUTHORING.md  README.md  coefficients.json  pyproject.toml
bench/data/: us_county_bboxes.json
bench/docs/plans/: 2026-05-26-eie-templating-three-way-bench.md  2026-05-26-geo-qa-templating-three-way-bench.md
bench/docs/specs/: 2026-05-26-eie-templating-three-way-bench-design.md  2026-05-26-geo-qa-templating-three-way-bench-design.md
bench/reports/: anthropic-cache-write-share-validation.md  cached-pipeline-2026-05-07T00-05-31-381342+00-00-trace.json  cached-pipeline-2026-05-07T00-07-51-563341+00-00-trace.json  cached-pipeline-2026-05-07T00-10-13-958768+00-00-trace.json  cached-pipeline-2026-05-07T00-13-11-108474+00-00-trace.json  cached-pipeline-anthropic-2026-05-07T03-40-24-983306+00-00-trace.json  cached-pipeline-anthropic-2026-05-14T01-24-25-272383+00-00-trace.json  data-discovery-2026-05-05T18-57-32-448933+00-00-trace.json  data-discovery-gpt52-2026-05-07T00-03-26-490012+00-00-trace.json  multi-stage-research-2026-05-05T18-28-40-842257+00-00-trace.json  multi-stage-research-2026-05-05T18-48-50-894676+00-00-trace.json  nasa-eie-validation.md  parallel-fan-out-2026-05-07T03-42-27-313044+00-00-trace.json  public-geospatial-qa-freeform-validation.md  public-geospatial-qa-templated-trace.json  public-geospatial-qa-validation.md  public-geospatial-react-freeform-2026-05-13T18-53-14-063732+00-00-trace.json  public-geospatial-react-freeform-2026-05-13T19-31-14-647879+00-00-trace.json  smoke-test-2026-05-05T17-36-41-834957+00-00-trace.json  smoke-test-2026-05-05T18-48-39-858154+00-00-trace.json  smoke-test-2026-05-13T19-17-51-773317+00-00-trace.json  streaming-pipeline-2026-05-05T18-39-43-097898+00-00-trace.json  synth-axiom-export-multi-stage.json  tool-chain-2026-05-05T18-44-46-906643+00-00-trace.json
bench/reports/eie-templating/: 2026-05-27-summary.md  eie-templating-bench-report.md  eie-templating-viewer.html  pattern-eie-freeform-2026-05-27T05-05-57.trace.json  pattern-eie-freeform-2026-05-27T05-12-07.trace.json  pattern-eie-freeform-2026-05-27T05-12-13.trace.json  pattern-eie-freeform-2026-05-28T05-18-59.trace.json  pattern-eie-freeform-2026-05-28T13-03-34.trace.json  pattern-eie-freeform-2026-05-28T21-47-49.trace.json  pattern-eie-freeform-2026-05-28T21-51-19.trace.json  pattern-eie-key-fields-2026-05-27T04-06-24.trace.json  pattern-eie-key-fields-2026-05-27T05-06-31.trace.json  pattern-eie-key-fields-2026-05-27T05-06-40.trace.json  pattern-eie-key-fields-2026-05-27T05-12-49.trace.json  pattern-eie-key-fields-2026-05-28T05-19-47.trace.json  pattern-eie-key-fields-2026-05-28T13-04-19.trace.json  pattern-eie-key-fields-2026-05-28T21-48-32.trace.json  pattern-eie-key-fields-2026-05-28T21-52-03.trace.json  pattern-eie-status-only-2026-05-27T04-06-45.trace.json  pattern-eie-status-only-2026-05-27T05-07-01.trace.json  pattern-eie-status-only-2026-05-27T05-07-06.trace.json  pattern-eie-status-only-2026-05-27T05-12-54.trace.json  pattern-eie-status-only-2026-05-27T05-13-14.trace.json  pattern-eie-status-only-2026-05-28T05-38-01.trace.json  pattern-eie-status-only-2026-05-28T13-04-48.trace.json  pattern-eie-status-only-2026-05-28T21-08-33.trace.json  pattern-eie-status-only-2026-05-28T21-48-52.trace.json  pattern-eie-status-only-2026-05-28T21-52-33.trace.json  pattern-paper-freeform-2026-05-28T05-21-36.trace.json  pattern-paper-freeform-2026-05-28T21-49-16.trace.json  pattern-paper-key-fields-2026-05-27T04-07-05.trace.json  pattern-paper-key-fields-2026-05-27T04-07-21.trace.json  pattern-paper-key-fields-2026-05-27T04-54-02.trace.json  pattern-paper-key-fields-2026-05-27T04-54-08.trace.json  pattern-paper-key-fields-2026-05-28T21-49-43.trace.json  pattern-paper-status-only-2026-05-27T03-45-44.trace.json  pattern-paper-status-only-2026-05-27T04-03-22.trace.json  pattern-paper-status-only-2026-05-27T04-07-12.trace.json  pattern-paper-status-only-2026-05-27T04-07-40.trace.json  pattern-paper-status-only-2026-05-27T04-54-09.trace.json  (+3 more)
bench/reports/geo-qa-templating/: geo-qa-templating-bench-report.md  geo-qa-templating-viewer.html  pattern-gated-freeform-2026-05-27T05-12-07.trace.json  pattern-gated-freeform-2026-05-27T05-12-13.trace.json  pattern-gated-freeform-2026-05-28T05-18-59.trace.json  (+33 more)
bench/scenarios/: cached-pipeline-anthropic.yml  cached-pipeline.yml  data-discovery-gpt52.yml  data-discovery.yml  eie-react.yml  long-chat.yml  multi-stage-research.yml  parallel-fan-out.yml  public-geospatial-react-freeform.yml  public-geospatial-react.yml  smoke-test.yml  streaming-pipeline.yml  tool-chain.yml
bench/src/agent_cost_bench/: __init__.py  cli.py  (+6 more)
(+251 files in other folders)
