[project]
name = "agent-cost-bench"
version = "0.2.0"
description = "Production-shaped benchmark harness for multi-agent LLM systems. Validates cost-calculator-studio's cost simulator against real provider usage data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ajinkya Kulkarni", email = "ajinkya.kulkarni@uah.edu" }]
keywords = ["llm", "agents", "cost", "benchmark", "langgraph", "litellm", "opentelemetry"]

dependencies = [
    # LangGraph for multi-agent orchestration — production-default for
    # state-machine-based agent flows.
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    # LiteLLM is the de-facto provider abstraction. One client, every
    # major provider, consistent usage reporting (cached_tokens etc).
    # Pin litellm>=1.62 so the openai responses-API import path resolves
    # on current openai>=1.40 — older litellm tries to import
    # `openai.types.responses` which moved in openai 1.40+. If you see
    # `ModuleNotFoundError: No module named 'openai.types.responses'`,
    # `pip install -U litellm` will fix it.
    "litellm>=1.62.0",
    # Keep openai pinned to a compatible major to match litellm's
    # internal import expectations.
    "openai>=1.40,<2.0",
    # OpenTelemetry — emits GenAI-semconv spans so traces are
    # consumable by Langfuse, Arize, Phoenix, Datadog, etc.
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    # Scenario specs are YAML — readable by humans, diff-friendly.
    "pyyaml>=6.0",
    # CLI ergonomics.
    "typer>=0.15.0",
    "rich>=13.9.0",
    # Loads .env so users don't have to export every variable.
    "python-dotenv>=1.0.0",
    # HTTP client for NASA VEDA STAC calls in the templating bench.
    # httpx is also a transitive of openai>=1.40 so this just pins it.
    "httpx>=0.27.0",
    # Reading Cloud Optimized GeoTIFF assets from STAC items, computing
    # per-band aggregates over a polygon AOI. Used by stac_tools.compute_stats.
    "rio-tiler>=6.7.0",
    # Natural-language datetime parsing for parse_datetime tool.
    "dateparser>=1.2.0",
]

[project.optional-dependencies]
# RAG-pgvector scenario needs Chroma. Optional because not all
# scenarios require a vector store.
rag = ["chromadb>=0.5.0"]
# MCP tool-chain scenario needs the MCP client SDK.
mcp = ["mcp>=0.9.0"]
dev = [
    "pytest>=8.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    # Mock HTTP responses in unit tests for VEDA STAC tools.
    "pytest-httpx>=0.34.0",
]

[project.scripts]
agent-cost-bench = "agent_cost_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_cost_bench"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
